Changes, working on navbar

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Git</title>
+<title>Git | A Tutorial</title>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-content
+	<div class="header">
+		<header>Git for absolute beginners</header>
+		<nav>
+			<ul>
+				<li><a href="#lesson1">Lesson 1</a></li>
+				<li><a href="#lesson2">Lesson 2</a></li>
+				<li><a href="#lesson3">Lesson 3</a></li>
+				<li><a href="#lesson4">Lesson 4</a></li>
+				<li><a href="#lesson5">Lesson 5</a></li>
+			</ul>
+		</nav>
+	</div>
 </body>
 </html>
