--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <title>Git | A Tutorial</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	
 	<div class="header">
 		<header>Git for absolute beginners</header>
 		<nav>
@@ -16,6 +18,15 @@
 				<li><a href="#lesson5">Lesson 5</a></li>
 			</ul>
 		</nav>
+	</div>
+
+	<div class="lessonsummary">
+		<div class="lessonexplain l1"></div>
+		<div class="lessonexplain l2"></div>
+		<div class="lessonexplain l3"></div>
+		<div class="lessonexplain l4"></div>
+		<div class="lessonexplain l5"></div>
+		<div class="lessonexplain l6"></div>
 	</div>
 </body>
 </html>
