--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
 	<div class="header">
 		<header>Git for absolute beginners</header>
 		<nav>
@@ -19,14 +18,25 @@
 			</ul>
 		</nav>
 	</div>
-
+<section>
 	<div class="lessonsummary">
-		<div class="lessonexplain l1"></div>
-		<div class="lessonexplain l2"></div>
-		<div class="lessonexplain l3"></div>
+		<div class="lessonexplain l1">
+		
+		</div>
+		<div class="lessonexplain l2">
+			
+		</div>
+		<div class="lessonexplain l3">
+			
+		</div>
 		<div class="lessonexplain l4"></div>
-		<div class="lessonexplain l5"></div>
-		<div class="lessonexplain l6"></div>
+		<div class="lessonexplain l5">
+			
+		</div>
+		<div class="lessonexplain l6">
+			
+		</div>
 	</div>
+</section>
 </body>
 </html>
