--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <title>Git | A Tutorial</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="header">
 		<header>Git for absolute beginners</header>
+		<h3>For those who ask the question: "what is git?"</h3>
 		<nav>
 			<ul>
-				<li><a href="#lesson1">Lesson 1</a></li>
-				<li><a href="#lesson2">Lesson 2</a></li>
-				<li><a href="#lesson3">Lesson 3</a></li>
-				<li><a href="#lesson4">Lesson 4</a></li>
-				<li><a href="#lesson5">Lesson 5</a></li>
+				<li class="navlesson1"><a href="#lesson1">Lesson 1</a></li>
+				<li class="navlesson2"><a href="#lesson2">Lesson 2</a></li>
+				<li class-"navlesson3"><a href="#lesson3">Lesson 3</a></li>
+				<li class="lesson4"><a href="#lesson4">Lesson 4</a></li>
+				<li class="lesson5"><a href="#lesson5">Lesson 5</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -35,6 +37,9 @@
 		</div>
 		<div class="lessonexplain l6">
 			
+		</div>
+		<div class="question">
+			<p>Got a bit of time on your hands and want to learn about the intuitive version control system used and trusted by novices and experienced developers alike?</p>
 		</div>
 	</div>
 </section>
