Added faq section, added site background

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</nav>
 	</div>
 <section>
+	
 	<div class="lessonsummary">
 		<div class="lessonexplain l1">
 		
@@ -40,6 +41,55 @@
 		</div>
 		<div class="question">
 			<p>Got a bit of time on your hands and want to learn about the intuitive version control system used and trusted by novices and experienced developers alike?</p>
+		</div>
+	</div>
+
+	<div class="faq">
+		<div class="whycontinue faqdivs">
+			<h2>Why should you<br>continue onwards in this site?</h2>
+			<div class="faqconstraint">
+				<ul>
+					<li>
+						Using branches, you can try new things without the fear of messing with your actual project
+					</li>
+					<li>
+						You will have a new place to store your code, eliminate the worry of a crashed HD
+					</li>
+					<li>
+						You'll be able to track changes to your code
+					</li>
+					<li>
+						Etc...
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="howlong faqdivs">
+			<h2>How long will it take<br>to complete the lessons on this site?</h2>
+			<div class="faqcontstraint">
+				<p>
+					The amount of time required to comlete this site can vary greatly, as different users come in with different amounts of prior knowledge. In general, it is important to progress through the lessons at a slow pace so as to make sure you fully understand the information presented. Put simply, take your time.
+				</p>
+			</div>
+		</div>
+		<div class="benefits faqdivs">
+			<h2>What will I get out<br>of completing this site?</h2>
+			<div class="faqconstraint">
+				<ul>
+					<li>
+						A thorough understanding of the basic functions of git
+					</li>
+					<li>
+						The ability to create repositories and maintain them locally
+					</li>
+					<li>
+						A connection with a large community of coders and creative individuals who seek to improve their own code as well as others
+					</li>
+					<li>
+						Etc...
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </section>
