--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						The ability to create repositories and maintain them locally
 					</li>
 					<li>
-						A connection with a large community of coders and creative individuals who seek to improve their own code as well as othershm on
+						A connection with a large community of coders and creative individuals who seek to improve their own code as well as others
 					</li>
 					<li>
 						Etc...
