Created the boxes for lesson 1, homepage (top) is complete

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div class="header">
-		<header>Git for absolute beginners</header>
-		<h3>For those who ask the question: "what is git?"</h3>
-		<nav>
-			<ul>
-				<li class="navlesson1"><a href="#lesson1">Lesson 1</a></li>
-				<li class="navlesson2"><a href="#lesson2">Lesson 2</a></li>
-				<li class-"navlesson3"><a href="#lesson3">Lesson 3</a></li>
-				<li class="lesson4"><a href="#lesson4">Lesson 4</a></li>
-				<li class="lesson5"><a href="#lesson5">Lesson 5</a></li>
-			</ul>
-		</nav>
+	<div class="fixednav">
+		<div class="header">
+			<header>Git for absolute beginners</header>
+			<h3>For those who ask the question: "what is git?"</h3>
+			<nav>
+				<ul>
+					<li class="navlesson1"><a href="#lesson1">Lesson 1</a></li>
+					<li class="navlesson2"><a href="#lesson2">Lesson 2</a></li>
+					<li class-"navlesson3"><a href="#lesson3">Lesson 3</a></li>
+					<li class="lesson4"><a href="#lesson4">Lesson 4</a></li>
+					<li class="lesson5"><a href="#lesson5">Lesson 5</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
 <section>
-	
 	<div class="lessonsummary">
 		<div class="lessonexplain l1">
 			<h3>Lesson 1</h3>
@@ -100,6 +101,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="lesson1" id="lesson1">
+		<h2>1</h2>
+		<h3>What is Git?</h3>
+		<p>(More importantly, why should you care?)</p>
+		<div class="gitexplaincontain">
+			<div class="gitexplaindivs"></div>
+			<div class="gitexplaindivs"></div>
+			<div class="gitexplaindivs"></div>
+		</div>
 </section>
 </body>
 </html>
