--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li class="navlesson1"><a href="#lesson1">Lesson 1</a></li>
 					<li class="navlesson2"><a href="#lesson2">Lesson 2</a></li>
-					<li class-"navlesson3"><a href="#lesson3">Lesson 3</a></li>
+					<li class="navlesson3"><a href="#lesson3">Lesson 3</a></li>
 					<li class="lesson4"><a href="#lesson4">Lesson 4</a></li>
 					<li class="lesson5"><a href="#lesson5">Lesson 5</a></li>
 				</ul>
@@ -110,6 +110,7 @@
 			<div class="gitexplaindivs"></div>
 			<div class="gitexplaindivs"></div>
 		</div>
+	</div>
 </section>
 </body>
 </html>
