--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				An intuitive version control system
 				</h3>
 				<p>
-					Assurance that your 	
+					Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
 				</p>
 			</div>
 			<div class="gitexplaindivs">
