Fixed an issue with z-index which was leading to problems with navbar

--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="lesson2" id="lesson2">
+		<div class="lessonparameter">
+			<h2>2</h2>
+		</div>		
+	</div>
 </section>
 </body>
 </html>
