Configured headers and added filler text for lesson 2 div

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 	</div>
 	<div class="lesson1" id="lesson1">
 		<div class="lessonparameter">
-			<h2>1</h2>
-			<h3>What is Git?</h3>
-			<p>(More importantly, why should you care?)</p>
+			<h2>2</h2>
+			<h3>A basic lesson in the shell</h3>
+			<p>(Basic navigation and use)</p>
 			<div class="gitexplaincontain">
 				<div class="gitexplaindivs">
 					<h3>
@@ -145,7 +145,46 @@
 	</div>
 	<div class="lesson2" id="lesson2">
 		<div class="lessonparameter">
-			<h2>2</h2>
+			<h2>1</h2>
+			<h3>What is Git?</h3>
+			<p>(More importantly, why should you care?)</p>
+			<div class="gitexplaincontain">
+				<div class="gitexplaindivs">
+					<h3>
+					An intuitive version control system
+					</h3>
+					<p>
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
+					</p>
+					<p>
+						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+					</p>
+				</div>
+				<div class="gitexplaindivs">
+					<h3>
+					An intuitive version control system
+					</h3>
+					<p>
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur
+					</p>
+					<p>
+						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+					</p>
+				</div>
+				<div class="gitexplaindivs">
+					<h3>
+					An intuitive version control system
+					</h3>
+					<p>
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
+					</p>
+					<p>
+						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+					</p>
+				</div>
+			</div>
+
+
 		</div>		
 	</div>
 </section>
