Lesson 2 div formatted, but still no text

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 	</div>
 	<div class="lesson1" id="lesson1">
 		<div class="lessonparameter">
-			<h2>2</h2>
-			<h3>A basic lesson in the shell</h3>
-			<p>(Basic navigation and use)</p>
+			<h2>1</h2>
+			<h3>What is Git?</h3>
+			<p>(More importantly, why should you care?)</p>
 			<div class="gitexplaincontain">
 				<div class="gitexplaindivs">
 					<h3>
@@ -145,9 +145,9 @@
 	</div>
 	<div class="lesson2" id="lesson2">
 		<div class="lessonparameter">
-			<h2>1</h2>
-			<h3>What is Git?</h3>
-			<p>(More importantly, why should you care?)</p>
+			<h2>2</h2>
+			<h3>A basic lesson in the shell</h3>
+			<p>(Basic navigation and git use)</p>
 			<div class="gitexplaincontain">
 				<div class="gitexplaindivs">
 					<h3>
