--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					An intuitive version control system
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur.
 					</p>
 					<p>
 						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
@@ -123,7 +123,7 @@
 					An intuitive version control system
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur.
 					</p>
 					<p>
 						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
@@ -134,7 +134,7 @@
 					An intuitive version control system
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
+						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur. 
 					</p>
 					<p>
 						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
@@ -147,7 +147,7 @@
 		<div class="lessonparameter">
 			<h2>2</h2>
 			<h3>A basic lesson in the shell</h3>
-			<p>(Basic navigation and git use)</p>
+			<p>(Basic navigation and git)</p>
 			<div class="gitexplaincontain">
 				<div class="gitexplaindivs">
 					<h3>
