Replaced filler text for more of lesson 1

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<div class="gitexplaincontain">
 				<div class="gitexplaindivs">
 					<h3>
-					An intuitive version control system
+						An intuitive version control system
 					</h3>
 					<p>
 						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur.
@@ -120,18 +120,19 @@
 				</div>
 				<div class="gitexplaindivs">
 					<h3>
-					An intuitive version control system
+						A lightweight yet powerful tool that allows you to collaborate with others effectively
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur.
+						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to individuals, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively manage the contributions of different team members.
+						No longer is there a need to worry about a server crash or other loss of data.
 					</p>
-					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
-					</p>
+				<!-- 	<p>
+						No longer is there a need to worry about a server crash or other loss of data. Git allows for maximum efficiency without all code being stored in one remote repository.
+					</p> -->
 				</div>
 				<div class="gitexplaindivs">
 					<h3>
-					An intuitive version control system
+						An intuitive version control system
 					</h3>
 					<p>
 						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur. 
