Changed filler text in lesson1 div#3

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						A lightweight yet powerful tool that allows you to collaborate with others effectively
 					</h3>
 					<p>
-						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to individuals, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively manage the contributions of different team members.
+						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to team members, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively dmanage the contributions of different team members.
 						No longer is there a need to worry about a server crash or other loss of data.
 					</p>
 				<!-- 	<p>
@@ -132,13 +132,13 @@
 				</div>
 				<div class="gitexplaindivs">
 					<h3>
-						An intuitive version control system
+						Access to a tremendous open source community
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur. 
+						Unlike many other systems out there, git truely has no limit. As a free user, one is able to host an unlimited amount of pages on the web, as well as a limitless amount of public repositories. 
 					</p>
 					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+						The benefits of using git lie not only in the ability to host sites for free or store code online, but in the community of individuals who volunteer countless hours improving code for others. Via pull requests, organizations, and more, git (and github) allow you to enter into a collaborative and self-sustaining community.
 					</p>
 				</div>
 			</div>
