Fixed alignment in the lesson explanations

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="lessonexplain l6">
 			<h3>Lesson 6</h3>
-			<p>Push your changes<br><br>(Push changes to your online repository)</p>
+			<p>Push your changes<br><br>(Push changes online to the repository)</p>
 		</div>
 		<div class="question">
 			<p>Got a bit of time on your hands and want to learn about the intuitive version control system used and trusted by novices and experienced developers alike?</p>
