Linked script file, working on icon at top left of page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
+<script type='text/javascript' src='script.js'></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 </head>
 <body>
 	<div class="fixednav">
 		<div class="header">
+			<div class="gitlogo"></div>
 			<header>Git for absolute beginners</header>
 			<h3>For those who ask the question: "what is git?"</h3>
 			<nav>
