--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
 <script type='text/javascript' src='script.js'></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.png" type="image/png" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div class="fixednav">
