Working on content and formatting, lesson2 and general

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 <link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
 <script type='text/javascript' src='script.js'></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-<link rel="icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon"> 
-<link rel="shortcut icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon">
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
+<!-- <link rel="icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon">  -->
+<!-- <link rel="shortcut icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon"> -->
 </head>
 <body>
 	<div class="fixednav">
 		<div class="header">
-			<div class="gitlogo"></div>
 			<header>Git for absolute beginners</header>
 			<h3>For those who ask the question: "what is git?"</h3>
 			<nav>
@@ -39,7 +38,7 @@
 		</div>
 		<div class="lessonexplain l3">
 			<h3>Lesson3</h3>
-			<p>Creating a repository online<br><br>(Create on the <a href="www.github.com">Github website</a>)</p>
+			<p>Creating a repository online<br><br>(Create on the <strong><a href="www.github.com">Github website</a></p></strong>)</p>
 		</div>
 		<div class="lessonexplain l4">
 			<h3>Lesson 4</h3>
@@ -140,7 +139,7 @@
 						Access to a tremendous open source community
 					</h3>
 					<p>
-						Unlike many other systems out there, git truely has no limit. As a free user, one is able to host an unlimited amount of pages on the web, as well as a limitless amount of public repositories. 
+						Unlike many other systems out there, git truly has no limit. As a free user, one is able to host an unlimited amount of pages on the web, as well as a limitless amount of public repositories. 
 					</p>
 					<p>
 						The benefits of using git lie not only in the ability to host sites for free or store code online, but in the community of individuals who volunteer countless hours improving code for others. Via pull requests, organizations, and more, git (and github) allow you to enter into a collaborative and self-sustaining community.
@@ -150,25 +149,25 @@
 		</div>
 	</div>
 	<div class="lesson2" id="lesson2">
-		<div class="lessonparameter">
-			<h2>2</h2>
+		<div class="lessonparameter">	
+			<div class="gitexplaincontain"><h2>2</h2></div>
 			<h3>A basic lesson in the shell</h3>
 			<p>(Basic navigation and git)</p>
 			<div class="gitexplaincontain">
-				<div class="gitexplaindivs">
+				<div class="shellexplaindivs">
 					<h3>
-					An intuitive version control system
+						What is "the shell" work, and why does it matter?
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
+						Right now, as you have visited this website, you are interacting with your computer. Command line interface has largely been replaced by GUIs, however the command line remains a powerful tool that can be used to manage git and more.
 					</p>
 					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>.
 					</p>
 				</div>
-				<div class="gitexplaindivs">
+				<div class="shellexplaindivs">
 					<h3>
-					An intuitive version control system
+						An intuitive version control system
 					</h3>
 					<p>
 						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur
@@ -177,9 +176,9 @@
 						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
 					</p>
 				</div>
-				<div class="gitexplaindivs">
+				<div class="shellexplaindivs">
 					<h3>
-					An intuitive version control system
+						An intuitive version control system
 					</h3>
 					<p>
 						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. 
