Removed br tags in lesson explanations

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 	<div class="lessonsummary">
 		<div class="lessonexplain l1">
 			<h3>Lesson 1</h3>
-			<p>What is Git?<br><br>(More importantly, why should you care?)</p>
+			<p>What is Git?</p><p>(More importantly, why should you care?)</p>
 		</div>
 		<div class="lessonexplain l2">
 			<h3>Lesson 2</h3>
-			<p>A basic lesson in the shell<br><br>(Basic navigation and git use)</p>
+			<p>A basic lesson in the shell</p><p>(Basic navigation and git use)</p>
 		</div>
 		<div class="lessonexplain l3">
 			<h3>Lesson3</h3>
-			<p>Creating a repository online<br><br>(Create on the <strong><a href="www.github.com">Github website</a></p></strong>)</p>
+			<p>Creating a repository online</p><p>(Create on the <a href="www.github.com">Github website</a>)</p>
 		</div>
 		<div class="lessonexplain l4">
 			<h3>Lesson 4</h3>
-			<p>Clone the repo<br><br>(Create a local copy to change and maintain)</p>
+			<p>Clone the repo</p><p>(Create a local copy to change and maintain)</p>
 		</div>
 		<div class="lessonexplain l5">
 			<h3>Lesson 5</h3>
-			<p>Adding files to your repo<br><br>(Add files to your local repository)</p>
+			<p>Adding files to your repo</p><p>(Add files to your local repository)</p>
 		</div>
 		<div class="lessonexplain l6">
 			<h3>Lesson 6</h3>
-			<p>Push your changes<br><br>(Push changes online to the repository)</p>
+			<p>Push your changes</p><p>(Push changes online to the repository)</p>
 		</div>
 		<div class="question">
 			<p>Got a bit of time on your hands and want to learn about the intuitive version control system used and trusted by novices and experienced developers alike?</p>
