--- a/index.html
+++ b/index.html
@@ -161,20 +161,14 @@
 					<p>
 						Right now, as you have visited this website, you are interacting with your computer. Command line interface has largely been replaced by GUIs, however the command line remains a powerful tool that can be used to manage git and more.
 					</p>
-					<p>
+					<p class="shellextrapadding">
 						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>.
 					</p>
 				</div>
-				<div class="shellexplaindivs">
+				<div class="shellexplaindiv2 shellexplaindivs">
 					<h3>
-						An intuitive version control system
+						~/
 					</h3>
-					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur
-					</p>
-					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
-					</p>
 				</div>
 			</div>
 
