Added to first lesson 2 contents

--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
 			<div class="gitexplaincontain">
 				<div class="shellexplaindivs">
 					<h3>
-						What is "the shell" work, and why does it matter?
+						What is "the shell", and why does it matter?
 					</h3>
 					<p>
 						Right now, as you have visited this website, you are interacting with your computer. Command line interface has largely been replaced by GUIs, however the command line remains a powerful tool that can be used to manage git and more.
 					</p>
 					<p class="shellextrapadding">
-						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>.
+						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash</strong>
 					</p>
 				</div>
 				<div class="shellexplaindiv2 shellexplaindivs">
