Added a bit of text to lesson 2 which is not all displayed, will format

--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
 					<h3>
 						~/
 					</h3>
+					<p class="p1shell">echo "This is what you will see"</p>
+					<p class="p2shell">This is what you will see</p>
 				</div>
 			</div>
 
