Fixed github link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="lessonexplain l3">
 			<h3>Lesson3</h3>
-			<p>Creating a repository online</p><p>(Create on the <a href="www.github.com">Github website</a>)</p>
+			<p>Creating a repository online</p><p>(Create on the <a href="https://www.github.com">Github website</a>)</p>
 		</div>
 		<div class="lessonexplain l4">
 			<h3>Lesson 4</h3>
