Finished intro text for lesson 2, working on content and movin g to next lessons

--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
 						Right now, as you have visited this website, you are interacting with your computer. Command line interface has largely been replaced by GUIs, however the command line remains a powerful tool that can be used to manage git and more.
 					</p>
 					<p class="shellextrapadding">
-						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash</strong>
+						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash</strong>.
 					</p>
+					<p>What you will see should look very similar to what is shown below- a terminal window with a flashing cursor and some text.</p>
 				</div>
-				<div class="shellexplaindiv2 shellexplaindivs">
+				<div class="shellexplaindiv2 shellexplaindivs terminalex">
 					<h3>
 						~/
 					</h3>
