Reformatted my terminal example text to be correctly positioned

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				</div>
 				<div class="shellexplaindiv2 shellexplaindivs terminalex">
 					<h3>
-						~/
+						YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
 					</h3>
 				</div>
 			</div>
