Added lots of content to lesson 2

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<div class="lesson2" id="lesson2">
 		<div class="lessonparameter">	
 			<div class="gitexplaincontain"><h2>2</h2></div>
-			<h3>A basic lesson in the shell</h3>
+			<h3>A basic less\shell</h3>
 			<p>(Basic navigation and git)</p>
 			<div class="gitexplaincontain">
 				<div class="shellexplaindivs">
@@ -165,17 +165,29 @@
 					<p class="shellextrapadding">
 						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash</strong>.
 					</p>
-					<p>What you will see should look very similar to what is shown below- a terminal window with a flashing cursor and some text.</p>
+					<p>What you will see should look very similar to what is shown below (figure 2.1)- a terminal window with a flashing cursor and some text.</p>
 				</div>
-				<div class="shellexplaindiv2 shellexplaindivs terminalex">
-					<h3>
-						YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
-					</h3>
+				
+				<div class="shellexplaincontainer">
+					<p>Figure 2.1</p>
+					<div class="shellexplaindiv2 shellexplaindivs terminalex">
+						<h3>
+							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
+						</h3>
+					</div>
+					<div class="cmdlist">
+						<h3>
+							Important commands to be familiar with
+						</h3>
+					</div>
 				</div>
 			</div>
 
 
 		</div>		
+	</div>
+	<div class="lesson3" id="lesson3">
+		
 	</div>
 </section>
 </body>
