Added terminal navigation, formatted

--- a/index.html
+++ b/index.html
@@ -172,13 +172,23 @@
 					<p>Figure 2.1</p>
 					<div class="shellexplaindiv2 shellexplaindivs terminalex">
 						<h3>
-							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
+							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/ _
 						</h3>
+						<p>$</p>
 					</div>
 					<div class="cmdlist">
 						<h3>
-							Important commands to be familiar with
+							Essential commands to navigate the shell:
 						</h3>
+						<p>
+						pwd: Print working directory (in order to navigate to the directory of your git repository, you must be able to identify which repo you are currently in!)
+						</p>
+						<p>
+						ls: Lists the files in the directory*
+						</p>
+						<p>
+							cd: Change directory (to move to the directory of your git repository)
+						</p>
 					</div>
 				</div>
 			</div>
