Improved lesson 2 formatting

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
 					</div>
 				</div>
 			</div>
-
-
 		</div>		
 	</div>
 	<div class="lesson3" id="lesson3">
-		
+		<div class="lessonparameter">
+			
+		</div>
 	</div>
 </section>
 </body>
