Added back to top fixed button in bottom right corner

--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
 	</div>
 	<div class="lesson3" id="lesson3">
 		<div class="lessonparameter">
-			div.
+			
 		</div>
+	</div>
+	<div class="footer">
+		<a href="index.html">Back to top</a>
 	</div>
 </section>
 </body>
