--- a/index.html
+++ b/index.html
@@ -205,35 +205,15 @@
 						Getting started on Github
 					</h3>
 					<p>
-						At this point, you may be somewhat relieved to return to a graphical user interface. 
-					</p>
-					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
 					</p>
 				</div>
-				<div class="onlineexplaindivs">
+				<div class="downloads">
 					<h3>
-						A lightweight yet powerful tool that allows you to collaborate with others effectively
+						Links:
 					</h3>
-					<p>
-						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to team members, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively manage the contributions of different team members.
-						No longer is there a need to worry about a server crash or other loss of data.
-					</p>
-				<!-- 	<p>
-						No longer is there a need to worry about a server crash or other loss of data. Git allows for maximum efficiency without all code being stored in one remote repository.
-					</p> -->
-				</div>
-				<div class="onlineexplaindivs">
-					<h3>
-						Access to a tremendous open source community
-					</h3>
-					<p>
-						Unlike many other systems out there, git truly has no limit. As a free user, one is able to host an unlimited amount of pages on the web, as well as a limitless amount of public repositories. 
-					</p>
-
-					<p>
-						The benefits of using git lie not only in the ability to host sites for free or store code online, but in the community of individuals who volunteer countless hours improving code for others. Via pull requests, organizations, and more, git (and github) allow you to enter into a collaborative and self-sustaining community.
-					</p>
+					<a href="https://www.github.com">Github Website</a>
+					<p>(Come here to sign up)</p>
 				</div>
 			</div>
 		</div>
