Added images, working on lesson 3 completion

--- a/index.html
+++ b/index.html
@@ -213,7 +213,11 @@
 						Links:
 					</h3>
 					<a href="https://www.github.com">Github Website</a>
-					<p>(Come here to sign up)</p>
+					<p>(Go here to sign up)</p>
+				</div>
+				<div class="tutorialimg">
+					<img src="github_signup.PNG" alt="github signup image">
+					<img src="new_repo.PNG" alt="new repository button">
 				</div>
 			</div>
 		</div>
