Formatting images into lesson 3

--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 					<p>(Go here to sign up)</p>
 				</div>
 				<div class="tutorialimg">
-					<img src="github_signup.PNG" alt="github signup image">
+					<h3>1</h3>
+					<img  class="signupimg" src="github_signup.PNG" alt="github signup image">
+					<h3>2</h3>
 					<img src="new_repo.PNG" alt="new repository button">
 				</div>
 			</div>
