Last commit of the night

--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
 					<img  class="signupimg" src="github_signup.PNG" alt="github signup image">
 					<h3>2</h3>
 					<img src="new_repo.PNG" alt="new repository button">
+					<h3>3</h3>
+					<img  class="namerepoimg" src="repository_name.PNG" alt="repository naming screen image">
 				</div>
 			</div>
 		</div>
