--- a/index.html
+++ b/index.html
@@ -219,13 +219,12 @@
 					<h3>1</h3>
 					<img  class="signupimg" src="github_signup.PNG" alt="github signup image">
 					<h3>2</h3>
-					<img src="new_repo.PNG" alt="new repository button">
+					<img  class="newrepobutton" src="new_repo.PNG" alt="new repository button">
 					<h3>3</h3>
-					<img  class="namerepoimg" src="repository_name.PNG" alt="repository naming screen image">
+					<img  class="namerepositoryimg" src="repository_name.PNG" alt="repository naming screen image">
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 	<div class="footer">
 		<a href="index.html">Back to top</a>
