Added Formatting on the lesson 3 numbering

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>A basic lesson in the shell</p><p>(Basic navigation and git use)</p>
 		</div>
 		<div class="lessonexplain l3">
-			<h3>Lesson3</h3>
+			<h3>Lesson 3</h3>
 			<p>Creating a repository online</p><p>(Create on the <a href="https://www.github.com">Github website</a>)</p>
 		</div>
 		<div class="lessonexplain l4">
@@ -172,9 +172,9 @@
 					<p>Figure 2.1</p>
 					<div class="shellexplaindiv2 shellexplaindivs terminalex">
 						<h3>
-							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/ _
+							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
 						</h3>
-						<p>$</p>
+						<p>$ _</p>
 					</div>
 					<div class="cmdlist">
 						<h3>
