Removed unnecessary hover opacity changes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="lesson1" id="lesson1">
+	<div class="lesson4" id="lesson4">
 		<div class="lessonparameter">
 			<h2>1</h2>
 			<h3>What is Git?</h3>
@@ -269,6 +269,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="lesson4" id="lesson4"></div>
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
