--- a/index.html
+++ b/index.html
@@ -228,48 +228,36 @@
 	</div>
 	<div class="lesson4" id="lesson4">
 		<div class="lessonparameter">
-			<h2>1</h2>
-			<h3>What is Git?</h3>
-			<p>(More importantly, why should you care?)</p>
-			<div class="gitexplaincontain">
-				<div class="gitexplaindivs">
+			<h2>3</h2>
+			<h3>Creating a repository online</h3>
+			<p>(Create on the Github website)</p>
+			<div class="onlinerepocontain">
+				<div class="onlineexplaindivs">
 					<h3>
-						An intuitive version control system
+						Getting started on Github
 					</h3>
 					<p>
-						Beyond just assurance that your code is backed up at some location other than your own hard drive, using git means that it is possible to revert a repository to its state at any given commit. So long as you use git frequently, there is literally no single point of failure that could possibly occur.
-					</p>
-					<p>
-						Additionally, using git allows you to seamlessly manage and distinguish between different groups of code- what will be part of the final product, testing, and anything else that could be necessary.
+						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
 					</p>
 				</div>
-				<div class="gitexplaindivs">
+				<div class="downloads">
 					<h3>
-						A lightweight yet powerful tool that allows you to collaborate with others effectively
+						Links:
 					</h3>
-					<p>
-						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to team members, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively manage the contributions of different team members.
-						No longer is there a need to worry about a server crash or other loss of data.
-					</p>
-				<!-- 	<p>
-						No longer is there a need to worry about a server crash or other loss of data. Git allows for maximum efficiency without all code being stored in one remote repository.
-					</p> -->
+					<a href="https://www.github.com">Github Website</a>
+					<p>(Go here to sign up)</p>
 				</div>
-				<div class="gitexplaindivs">
-					<h3>
-						Access to a tremendous open source community
-					</h3>
-					<p>
-						Unlike many other systems out there, git truly has no limit. As a free user, one is able to host an unlimited amount of pages on the web, as well as a limitless amount of public repositories. 
-					</p>
-					<p>
-						The benefits of using git lie not only in the ability to host sites for free or store code online, but in the community of individuals who volunteer countless hours improving code for others. Via pull requests, organizations, and more, git (and github) allow you to enter into a collaborative and self-sustaining community.
-					</p>
+				<div class="tutorialimg">
+					<h3>1</h3>
+					<img  class="signupimg" src="github_signup.PNG" alt="github signup image">
+					<h3>2</h3>
+					<img  class="newrepobutton" src="new_repo.PNG" alt="new repository button">
+					<h3>3</h3>
+					<img  class="namerepositoryimg" src="repository_name.PNG" alt="repository naming screen image">
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="lesson4" id="lesson4"></div>
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
