--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 			<header>Git for absolute beginners</header>
 			<h3>For those who ask the question: "what is git?"</h3>
 			<nav>
-				<ul>
+				<ul class="navulparameter">
 					<li class="navlesson1"><a href="#lesson1">Lesson 1</a></li>
 					<li class="navlesson2"><a href="#lesson2">Lesson 2</a></li>
 					<li class="navlesson3"><a href="#lesson3">Lesson 3</a></li>
-					<li class="lesson4"><a href="#lesson4">Lesson 4</a></li>
-					<li class="lesson5"><a href="#lesson5">Lesson 5</a></li>
+					<li class="navlesson4"><a href="#lesson4">Lesson 4</a></li>
+					<li class="navlesson5"><a href="#lesson5">Lesson 5</a></li>
+					<li class="navlesson6"><a href="#lesson6">Lesson 6</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -226,38 +227,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="lesson4" id="lesson4">
-		<div class="lessonparameter">
-			<h2>3</h2>
-			<h3>Creating a repository online</h3>
-			<p>(Create on the Github website)</p>
-			<div class="onlinerepocontain">
-				<div class="onlineexplaindivs">
-					<h3>
-						Getting started on Github
-					</h3>
-					<p>
-						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
-					</p>
-				</div>
-				<div class="downloads">
-					<h3>
-						Links:
-					</h3>
-					<a href="https://www.github.com">Github Website</a>
-					<p>(Go here to sign up)</p>
-				</div>
-				<div class="tutorialimg">
-					<h3>1</h3>
-					<img  class="signupimg" src="github_signup.PNG" alt="github signup image">
-					<h3>2</h3>
-					<img  class="newrepobutton" src="new_repo.PNG" alt="new repository button">
-					<h3>3</h3>
-					<img  class="namerepositoryimg" src="repository_name.PNG" alt="repository naming screen image">
-				</div>
-			</div>
-		</div>
-	</div>
+	<div class=""
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
