--- a/index.html
+++ b/index.html
@@ -227,7 +227,23 @@
 			</div>
 		</div>
 	</div>
-	<div class=""
+	<div class="lesson4" id="lesson4">
+	<div class="lessonparameter">
+		<h2>4</h2>
+		<h3>Cloning the Repository</h3>
+		<p>(Create on the Github website)</p>
+		<div class="clonecontain">
+			<div class="localclonedivs">
+				<h3>
+					Getting started on Github
+				</h3>
+				<p>
+					Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
+				</p>
+			</div>
+		</div>
+	</div>
+	</div>
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
