--- a/index.html
+++ b/index.html
@@ -244,6 +244,24 @@
 		</div>
 	</div>
 	</div>
+
+	<div class="lesson5" id="lesson5">
+		<div class="lessonparameter">
+			<h2>5</h2>
+			<h3>Adding files to your repository</h3>
+			<p>(Add files to your local repository)</p>
+			<div class="localsavecontain">
+				<div class="localsavedivs">
+					<h3>
+						Getting started on Github
+					</h3>
+					<p>
+						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
