--- a/index.html
+++ b/index.html
@@ -262,6 +262,25 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="lesson6" id="lesson6">
+		<div class="lessonparameter">
+			<h2>6</h2>
+			<h3>Pushing your changes</h3>
+			<p>(Push your changes online to the repository)</p>
+			<div class="gitpushcontain">
+				<div class="gitpushdivs">
+					<h3>
+						Getting started on Github
+					</h3>
+					<p>
+						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="footer">
 		<a href="index.html">Back to top</a>
 	</div>
