--- a/index.html
+++ b/index.html
@@ -227,22 +227,26 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="lesson4" id="lesson4">
-	<div class="lessonparameter">
-		<h2>4</h2>
-		<h3>Cloning the Repository</h3>
-		<p>(Create on the Github website)</p>
-		<div class="clonecontain">
-			<div class="localclonedivs">
-				<h3>
-					Getting started on Github
-				</h3>
-				<p>
-					Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
-				</p>
+		<div class="lessonparameter">
+			<h2>4</h2>
+			<h3>Cloning the Repository</h3>
+			<p>(Create on the Github website)</p>
+			<div class="clonecontain">
+				<div class="localclonedivs">
+					<h3>
+						What does cloning mean?
+					</h3>
+					<p>
+						When using Git, cloning refers to downloading the entire contents of a repository on to one's personal computer. Unlike other version control systems, Git allows you or anyone else who so desires to download the entire repository.
+					</p>
+					<p>
+						This, of course, has several notable benefits. As Git is built around the idea of open source code, anyone in the world is able to clone a repository and help the owner fix mistakes and produce better products.
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 
 	<div class="lesson5" id="lesson5">
@@ -281,8 +285,9 @@
 		</div>
 	</div>
 
-	<div class="footer">
-		<a href="index.html">Back to top</a>
+	
+	<div class=".rightnav">
+		<span class="back-to-top"><a href="index.html">Top</a></span>
 	</div>
 </section>
 </body>
