Working on favicon

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <link href='http://fonts.googleapis.com/css?family=Denk+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic' rel='stylesheet' type='text/css'>
-<script type='text/javascript' src='script.js'></script>
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> -->
-<!-- <link rel="icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon">  -->
-<!-- <link rel="shortcut icon" href="https://www.dropbox.com/s/br5i8rmb9we5xhb/favicon.ico" type="image/x-icon"> -->
+<script src="js/jquery-1.9.1.js"></script>
+<script src="js/jquery-ui-1.10.3.custom.js"></script>
+<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
 </head>
 <body>
 	<div class="fixednav">
@@ -107,7 +106,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="lesson1" id="lesson1">
+	<div class="lesson1 lessons" id="lesson1">
 		<div class="lessonparameter">
 			<h2>1</h2>
 			<h3>What is Git?</h3>
@@ -132,9 +131,6 @@
 						When working on group projects, it is natural for work to be divided up. Traditionally, certain snippets of code would be distributed to team members, however few individuals would actually hold the entire code. Using git, this problem no longer exists- each person from the team stores the entire repository on their computer, and branches can be created to effectively manage the contributions of different team members.
 						No longer is there a need to worry about a server crash or other loss of data.
 					</p>
-				<!-- 	<p>
-						No longer is there a need to worry about a server crash or other loss of data. Git allows for maximum efficiency without all code being stored in one remote repository.
-					</p> -->
 				</div>
 				<div class="gitexplaindivs">
 					<h3>
@@ -150,7 +146,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="lesson2" id="lesson2">
+	<div class="lesson2 lessons" id="lesson2">
 		<div class="lessonparameter">	
 			<div class="gitexplaincontain"><h2>2</h2></div>
 			<h3>A basic lesson in the shell</h3>
@@ -195,7 +191,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="lesson3" id="lesson3">
+	<div class="lesson3 lessons" id="lesson3">
 		<div class="lessonparameter">
 			<h2>3</h2>
 			<h3>Creating a repository online</h3>
@@ -228,7 +224,7 @@
 		</div>
 	</div>
 
-	<div class="lesson4" id="lesson4">
+	<div class="lesson4 lessons" id="lesson4">
 		<div class="lessonparameter">
 			<h2>4</h2>
 			<h3>Cloning the Repository</h3>
@@ -237,7 +233,7 @@
 				<div class="localclonedivs">
 					<h3>
 						What does cloning mean?
-					</h3>
+					</ch3>
 					<p>
 						When using Git, cloning refers to downloading the entire contents of a repository on to one's personal computer. Unlike other version control systems, Git allows you or anyone else who so desires to download the entire repository.
 					</p>
@@ -249,7 +245,7 @@
 		</div>
 	</div>
 
-	<div class="lesson5" id="lesson5">
+	<div class="lesson5 lessons" id="lesson5">
 		<div class="lessonparameter">
 			<h2>5</h2>
 			<h3>Adding files to your repository</h3>
@@ -257,7 +253,7 @@
 			<div class="localsavecontain">
 				<div class="localsavedivs">
 					<h3>
-						Getting started on Github
+						Local repositories and git
 					</h3>
 					<p>
 						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
@@ -267,7 +263,7 @@
 		</div>
 	</div>
 
-	<div class="lesson6" id="lesson6">
+	<div class="lesson6 lessons" id="lesson6">
 		<div class="lessonparameter">
 			<h2>6</h2>
 			<h3>Pushing your changes</h3>
