Fixed a typo that was messing up formatting

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						Right now, as you have visited this website, you are interacting with your computer. Command line interface has largely been replaced by GUIs, however the command line remains a powerful tool that can be used to manage git and more.
 					</p>
 					<p class="shellextrapadding">
-						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash</strong>.
+						To get started, you are going to want to go ahead and <a href="http://git-scm.com/downloads">download git</a>. Once you have finished, go ahead and open up <strong>Git Bash.</strong>
 					</p>
 					<p>What you will see should look very similar to what is shown below (figure 2.1)- a terminal window with a flashing cursor and some text.</p>
 				</div>
@@ -181,11 +181,11 @@
 						pwd: Print working directory (in order to navigate to the directory of your git repository, you must be able to identify which repo you are currently in!)
 						</p>
 						<p>
-						ls: Lists the files in the directory*
+						ls: Lists the files in the directory (excluding hidden files)
 						</p>
 						<p>
 							cd: Change directory (to move to the directory of your git repository)
-						`</p>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -233,7 +233,7 @@
 				<div class="localclonedivs">
 					<h3>
 						What does cloning mean?
-					</ch3>
+					</h3>
 					<p>
 						When using Git, cloning refers to downloading the entire contents of a repository on to one's personal computer. Unlike other version control systems, Git allows you or anyone else who so desires to download the entire repository.
 					</p>
