Added inline image next to cloning explanation

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 				</ul>
 			</div>
 		</div>
+
 		<div class="howlong faqdivs">
 			<h2>How long will it take<br>to complete the lessons on this site?</h2>
 			<div class="faqcontstraint">
@@ -86,6 +87,7 @@
 				</p>
 			</div>
 		</div>
+
 		<div class="benefits faqdivs">
 			<h2>What will I get out<br>of completing this site?</h2>
 			<div class="faqconstraint">
@@ -106,6 +108,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="lesson1 lessons" id="lesson1">
 		<div class="lessonparameter">
 			<h2>1</h2>
@@ -146,6 +149,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="lesson2 lessons" id="lesson2">
 		<div class="lessonparameter">	
 			<div class="gitexplaincontain"><h2>2</h2></div>
@@ -191,6 +195,7 @@
 			</div>
 		</div>		
 	</div>
+
 	<div class="lesson3 lessons" id="lesson3">
 		<div class="lessonparameter">
 			<h2>3</h2>
@@ -241,6 +246,7 @@
 						This, of course, has several notable benefits. As Git is built around the idea of open source code, anyone in the world is able to clone a repository and help the owner fix mistakes and produce better products.
 					</p>
 				</div>
+				<span class="cloneimg"><img src="git-clone-img.png" alt="Git clone diagram"></span>
 			</div>
 		</div>
 	</div>
