Working on adding footer, which will incorporate a palatte when hovered over

--- a/index.html
+++ b/index.html
@@ -291,6 +291,18 @@
 	<div class=".rightnav">
 		<span class="back-to-top"><a href="index.html">Top</a></span>
 	</div>
+
+	<footer>
+		<nav class="footernav">
+			<ul>
+				<li><a href="https://github.com/michaeltnoronha">Find me on GitHub</a></li>
+				<li><a href="mailto:micaheltnoronha@gmail.com?Subject=Hello%20again" target="_top">
+Send me an email</a></li>
+				<li>Phone number: (847) 708 1864</li>
+				<li><a href="#">This links somewhere</a></li>
+			</ul>
+		</nav>
+	</footer>
 </section>
 </body>
 </html>
