Formatted lesson 4 terminal demo window

--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@
 					</p>
 				</div>
 				<span class="cloneimg"><img src="git-clone-img.png" alt="Git clone diagram"></span>
+				<div class="cloneterminal">
+					<h3>
+							YOUR_ACCOUNT_NAME@YOURCOMPUTERNAME ~/
+					</h3>
+					<p>$ git clone https://github.com/michaeltnoronha/git_tutorial.git_</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -295,10 +301,10 @@
 	<footer>
 		<nav class="footernav">
 			<ul>
-				<li><a href="https://github.com/michaeltnoronha">Find me on GitHub</a></li>
-				<li><a href="mailto:micaheltnoronha@gmail.com?Subject=Hello%20again" target="_top">
+				<li><a href="https://github.com/michaeltnoronha" class="findongithub">Find me on GitHub</a></li>
+				<li><a href="mailto:micaheltnoronha@gmail.com?Subject=Hello%20there" target="_top"  class="emailme">
 Send me an email</a></li>
-				<li>Phone number: (847) 708 1864</li>
+				<li class="phonenumber">Phone number: (847) 708 1864</li>
 				<li><a href="#">This links somewhere</a></li>
 			</ul>
 		</nav>
